--- a/src/components/layout/header/Header.module.css
+++ b/src/components/layout/header/Header.module.css
@@ -15,7 +15,7 @@ height:45px;
 }
 .header .wrapper {
 margin-left: 16px;
-width: calc(75%-16px);
+width: 700px;
 border-radius: 30px;
 background-color: #cf0ec6;
 position: relative;
